--- a/services/locations.html
+++ b/services/locations.html
@@ -82,9 +82,26 @@
     </style>
 </head>
 <body>
-    <header>
-        <h1>Our Locations</h1>
-    </header>
+    <nav>
+        <ul>
+            <li><a href="../index.html" >Home</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="#" class="active">Services</a>
+                <ul class="hoveritem">
+                    <li><a href="./vehicle.html">Vehicles</a></li>
+                    <li><a href="./deals.html">Deals</a></li>
+                    <li><a href="./locations.html">Locations</a></li>
+                    <li><a href="./insurance.html">Insurance</a></li>
+                    <li><a href="./reservation.html">Reservation</a></li>
+                </ul>
+            </li>
+            <li><a href="../gallery.html">Project Gallery</a></li>
+            <li><a href="./partner.html">Partner</a></li>
+            <li><a href="../contact.html">Contact</a></li>
+            <li><a href="../career.html">Career</a></li>
+            <li><a href="../reference.html">Reference</a></li>
+        </ul>
+    </nav>
 
     <main>
         <section class="locations-section">
