--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
                     <li><a href="services/locations.html">Locations</a></li>
                     <li><a href="services/insurance.html">Insurance</a></li>
                     <li><a href="services/reservation.html">Reservation</a></li>
+                    <li><a href="pricing.html" >Pricing</a></li>
                     
                 </ul>
             </li>
@@ -27,6 +28,9 @@
             <li><a href="contact.html" class="active">Contact</a></li>
             <li><a href="career.html">Career</a></li>
             <li><a href="reference.html">Reference</a></li>
+            <li><a href="pricing.html">Pricing</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="privacy.html" >Privay & policy</a></li>
         </ul>
     </nav>
 
