--- a/reference.html
+++ b/reference.html
@@ -14,7 +14,7 @@
             <li><a href="#">Services</a>
                 <ul class="hoveritem">
                    
-                    <li><a href="services/">Vehicles</a></li>
+                    <li><a href="services/vehicle.html">Vehicles</a></li>
                     <li><a href="services/deals.html">Deals</a></li>
                     <li><a href="services/locations.html">Locations</a></li>
                     <li><a href="services/insurance.html">Insurance</a></li>
@@ -27,6 +27,9 @@
             <li><a href="contact.html">Contact</a></li>
             <li><a href="career.html">Career</a></li>
             <li><a href="reference.html" class="active">Reference</a></li>
+            <li><a href="pricing.html" >Pricing</a></li>
+            <li><a href="faq.html" >FAQ</a></li>
+            <li><a href="privacy.html" >Privay & policy</a></li>
         </ul>
     </nav>
     <main>
@@ -41,7 +44,7 @@
                 <em>Auto Rental News,</em> 
                 <a href="https://www.autorentalnews.com/10160274/top-10-car-rental-companies-in-the-world-in-2023">www.autorentalnews.com/10160274/top-10-car-rental-companies-in-the-world-in-2023</a>.
             </li>
-            <!-- Add more list items for each reference -->
+           
         </ol>
     </main>
 </body>
