--- a/partner.html
+++ b/partner.html
@@ -4,22 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Partner</title>
-    <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="./index.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 80px 0;
-        }
-
         .partner-section {
             padding: 50px 0;
             text-align: center;
@@ -96,7 +82,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html" >Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="#">Services</a>
                 <ul class="hoveritem">
@@ -108,10 +94,13 @@
                 </ul>
             </li>
             <li><a href="gallery.html">Project Gallery</a></li>
-            <li><a href="partner.html">Partner</a></li>
+            <li><a href="partner.html" class="active">Partner</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="career.html">Career</a></li>
             <li><a href="reference.html">Reference</a></li>
+            <li><a href="pricing.html" >Pricing</a></li>
+            <li><a href="faq.html" >FAQ</a></li>
+            <li><a href="privacy.html" >Privay & policy</a></li>
         </ul>
     </nav>
 
