--- a/services/deals.html
+++ b/services/deals.html
@@ -102,6 +102,9 @@
             <li><a href="../contact.html">Contact</a></li>
             <li><a href="../career.html">Career</a></li>
             <li><a href="../reference.html">Reference</a></li>
+            <li><a href="../pricing.html" >Pricing</a></li>
+            <li><a href="../faq.html">FAQ</a></li>
+            <li><a href="../privacy.html" >Privay & policy</a></li>
         </ul>
     </nav>
 
